# m2c-digital-consumer-rust

./: .env-example  Cargo.toml  README.md  docker-compose.yaml
src/: main.rs
src/domain/models/: message.rs
src/infra/database/: mongodb_adapter.rs  redis_adapter.rs
src/infra/http/: http_adapter.rs
src/infra/queue/: rabbitmq_adapter.rs
src/usecases/: consume_messages.rs
