[package]
name = "hello-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
mongodb = "2.0"
redis = { version = "0.23", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
lapin = "1.8"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
serde = "1.0"
serde_json = "1.0"